Fix vite configs to build apps with index.html (not libraries)

--- a/linen-calculator/index.html
+++ b/linen-calculator/index.html
@@ -9,7 +9,7 @@
     <div
       id="rentkit-linen-calculator"
       data-theme="light"
-      data-primary-color="#2e7d32"
+      data-primary-color="#70C58C"
       data-cta-text="Get a Quote"
     ></div>
     <script type="module" src="/src/embed.tsx"></script>
